--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,42 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
     <TextView
+        android:id="@+id/action"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+
+    <ImageButton
+        android:id="@+id/stick1"
+        android:layout_width="wrap_content"
+        android:layout_height="1200px"
+        app:layout_constraintBottom_toBottomOf="@id/Box"
+        app:layout_constraintLeft_toLeftOf="@id/Box"
+        android:layout_marginLeft="150px"
+        android:background="@drawable/stick"
+        android:layout_margin="60px"
+        />
+
+    <ImageView
+        android:id="@+id/Box"
+        android:layout_width="900px"
+        android:layout_height="900px"
+        android:layout_marginTop="600px"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/box"
+        />
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
