--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,3 +1,4 @@
+
 <resources>
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -5,6 +6,18 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <!-- 타이틀바 없애기-->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="TabTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+
+        <item name="colorPrimary">#f5a623</item>     <!-- 배경 -->
+        <item name="android:textColorSecondary">@android:color/black</item>   <!-- 탭바 텍스트 -->
+        <item name="android:textColorPrimary">@android:color/white</item>     <!-- 탭바 선택된 텍스트 -->
+        <item name="colorAccent">@android:color/white</item>      <!-- 하단 움직이는 바 색-->
+
+
+    </style>
 </resources>
