--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
+
 
     <TextView
         android:id="@+id/action"
@@ -15,26 +18,73 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
+
+
     <ImageButton
         android:id="@+id/stick1"
-        android:layout_width="wrap_content"
+        android:layout_width="200px"
         android:layout_height="1200px"
         app:layout_constraintBottom_toBottomOf="@id/Box"
         app:layout_constraintLeft_toLeftOf="@id/Box"
+        android:layout_marginLeft="90px"
+        android:background="@drawable/stick"
+        android:layout_marginBottom="50px"
+        />
+
+    <ImageButton
+        android:id="@+id/stick2"
+        android:layout_width="200px"
+        android:layout_height="1200px"
+        app:layout_constraintBottom_toBottomOf="@id/Box"
+        app:layout_constraintLeft_toLeftOf="@id/stick1"
         android:layout_marginLeft="150px"
         android:background="@drawable/stick"
-        android:layout_margin="60px"
+        android:layout_marginBottom="50px"
+        />
+
+    <ImageButton
+        android:id="@+id/stick3"
+        android:layout_width="200px"
+        android:layout_height="1200px"
+        app:layout_constraintBottom_toBottomOf="@id/Box"
+        app:layout_constraintLeft_toLeftOf="@id/stick2"
+        android:layout_marginLeft="150px"
+        android:background="@drawable/stick"
+        android:layout_marginBottom="50px"
+        />
+
+    <ImageButton
+        android:id="@+id/stick4"
+        android:layout_width="200px"
+        android:layout_height="1200px"
+        app:layout_constraintBottom_toBottomOf="@id/Box"
+        app:layout_constraintLeft_toLeftOf="@id/stick3"
+        android:layout_marginLeft="150px"
+        android:background="@drawable/stick"
+        android:layout_marginBottom="50px"
+        />
+
+    <ImageButton
+        android:id="@+id/stick5"
+        android:layout_width="200px"
+        android:layout_height="1200px"
+        app:layout_constraintBottom_toBottomOf="@id/Box"
+        app:layout_constraintLeft_toLeftOf="@id/stick4"
+        android:layout_marginLeft="150px"
+        android:background="@drawable/stick"
+        android:layout_marginBottom="50px"
         />
 
     <ImageView
         android:id="@+id/Box"
-        android:layout_width="900px"
+        android:layout_width="1000px"
         android:layout_height="900px"
         android:layout_marginTop="600px"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/box"
+        android:background="@drawable/boxcut"
         />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
