--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,90 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
+
+    <!-- 'com.google.android.material:material:1.2.1' -->
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/TabTheme">
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <!-- 뷰페이저 -->
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/vpMainActivity"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/action"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="170dp"
         />
 
 
     <ImageButton
         android:id="@+id/stick1"
-        android:layout_width="200px"
-        android:layout_height="1200px"
-        app:layout_constraintBottom_toBottomOf="@id/Box"
-        app:layout_constraintLeft_toLeftOf="@id/Box"
-        android:layout_marginLeft="90px"
+        android:layout_width="80dp"
+        android:layout_height="500dp"
+        android:layout_marginLeft="35dp"
         android:background="@drawable/stick"
-        android:layout_marginBottom="50px"
+        android:layout_marginTop="100dp"
+
         />
 
     <ImageButton
         android:id="@+id/stick2"
-        android:layout_width="200px"
-        android:layout_height="1200px"
-        app:layout_constraintBottom_toBottomOf="@id/Box"
-        app:layout_constraintLeft_toLeftOf="@id/stick1"
-        android:layout_marginLeft="150px"
+        android:layout_width="80dp"
+        android:layout_height="500dp"
+        android:layout_marginLeft="62dp"
         android:background="@drawable/stick"
-        android:layout_marginBottom="50px"
+        android:layout_marginTop="100dp"
+        android:layout_alignLeft="@id/stick1"
         />
 
     <ImageButton
         android:id="@+id/stick3"
-        android:layout_width="200px"
-        android:layout_height="1200px"
-        app:layout_constraintBottom_toBottomOf="@id/Box"
-        app:layout_constraintLeft_toLeftOf="@id/stick2"
-        android:layout_marginLeft="150px"
+        android:layout_width="80dp"
+        android:layout_height="500dp"
+        android:layout_marginLeft="62dp"
         android:background="@drawable/stick"
-        android:layout_marginBottom="50px"
+        android:layout_marginTop="100dp"
+        android:layout_alignLeft="@id/stick2"
         />
 
     <ImageButton
         android:id="@+id/stick4"
-        android:layout_width="200px"
-        android:layout_height="1200px"
-        app:layout_constraintBottom_toBottomOf="@id/Box"
-        app:layout_constraintLeft_toLeftOf="@id/stick3"
-        android:layout_marginLeft="150px"
+        android:layout_width="80dp"
+        android:layout_height="500dp"
+        android:layout_marginLeft="62dp"
         android:background="@drawable/stick"
-        android:layout_marginBottom="50px"
+        android:layout_marginTop="100dp"
+        android:layout_alignLeft="@id/stick3"
         />
 
     <ImageButton
         android:id="@+id/stick5"
-        android:layout_width="200px"
-        android:layout_height="1200px"
-        app:layout_constraintBottom_toBottomOf="@id/Box"
-        app:layout_constraintLeft_toLeftOf="@id/stick4"
-        android:layout_marginLeft="150px"
+        android:layout_width="80dp"
+        android:layout_height="500dp"
+        android:layout_marginLeft="62dp"
         android:background="@drawable/stick"
-        android:layout_marginBottom="50px"
+        android:layout_marginTop="100dp"
+        android:layout_alignLeft="@id/stick4"
         />
 
     <ImageView
         android:id="@+id/Box"
-        android:layout_width="1000px"
-        android:layout_height="900px"
-        android:layout_marginTop="600px"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="500dp"
+        android:layout_height="400dp"
+        android:layout_marginTop="300dp"
         android:background="@drawable/boxcut"
         />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </RelativeLayout>
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
