--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,7 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <!--Tab테마-->
     <style name="TabTheme" parent="Theme.AppCompat.Light.DarkActionBar">
 
         <item name="colorPrimary">#f5a623</item>     <!-- 배경 -->
