--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
         <Button
             android:id="@+id/adult_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="300dp"
             android:text="@string/adult_start"
             />
-
 
         <TextView
             android:id="@+id/action"
@@ -26,6 +21,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hello World!"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="170dp"
             />
 
@@ -33,63 +30,76 @@
         <ImageButton
             android:id="@+id/stick1"
             android:layout_width="80dp"
-            android:layout_height="500dp"
+            android:layout_height="450dp"
             android:layout_marginLeft="35dp"
             android:background="@drawable/stick"
-            android:layout_marginTop="100dp"
+            android:layout_marginBottom="70dp"
+            app:layout_constraintLeft_toLeftOf="@id/Box"
+            app:layout_constraintBottom_toBottomOf="@id/Box"
 
             />
 
         <ImageButton
             android:id="@+id/stick2"
             android:layout_width="80dp"
-            android:layout_height="500dp"
+            android:layout_height="450dp"
             android:layout_marginLeft="62dp"
             android:background="@drawable/stick"
             android:layout_marginTop="100dp"
             android:layout_alignLeft="@id/stick1"
+            app:layout_constraintLeft_toLeftOf="@id/stick1"
+            app:layout_constraintBottom_toBottomOf="@id/Box"
+            android:layout_marginBottom="70dp"
             />
 
         <ImageButton
             android:id="@+id/stick3"
             android:layout_width="80dp"
-            android:layout_height="500dp"
+            android:layout_height="450dp"
             android:layout_marginLeft="62dp"
             android:background="@drawable/stick"
             android:layout_marginTop="100dp"
             android:layout_alignLeft="@id/stick2"
+            app:layout_constraintLeft_toLeftOf="@id/stick2"
+            app:layout_constraintBottom_toBottomOf="@id/Box"
+            android:layout_marginBottom="70dp"
             />
 
         <ImageButton
             android:id="@+id/stick4"
             android:layout_width="80dp"
-            android:layout_height="500dp"
+            android:layout_height="450dp"
             android:layout_marginLeft="62dp"
             android:background="@drawable/stick"
             android:layout_marginTop="100dp"
             android:layout_alignLeft="@id/stick3"
+            app:layout_constraintLeft_toLeftOf="@id/stick3"
+            app:layout_constraintBottom_toBottomOf="@id/Box"
+            android:layout_marginBottom="70dp"
             />
 
         <ImageButton
             android:id="@+id/stick5"
             android:layout_width="80dp"
-            android:layout_height="500dp"
+            android:layout_height="450dp"
             android:layout_marginLeft="62dp"
             android:background="@drawable/stick"
             android:layout_marginTop="100dp"
             android:layout_alignLeft="@id/stick4"
+            app:layout_constraintLeft_toLeftOf="@id/stick4"
+            app:layout_constraintBottom_toBottomOf="@id/Box"
+            android:layout_marginBottom="70dp"
             />
 
         <ImageView
             android:id="@+id/Box"
-            android:layout_width="500dp"
+            android:layout_width="400dp"
             android:layout_height="400dp"
-            android:layout_marginTop="300dp"
             android:background="@drawable/boxcut"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginBottom="100dp"
             />
 
-    </RelativeLayout>
 
-
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
