--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,8 +85,7 @@
             android:layout_width="500dp"
             android:layout_height="400dp"
             android:layout_marginTop="300dp"
-            android:background="@drawable/boxcut"
-            />
+            android:background="@drawable/boxcut" />
 
     </RelativeLayout>
 
