--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,16 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorMainBack">
 
 
-        <Button
+        <Switch
             android:id="@+id/adult_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="300dp"
+            android:layout_marginLeft="200dp"
             android:text="@string/adult_start"
             />
 
@@ -23,15 +24,16 @@
             android:text="Hello World!"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="170dp"
+            android:layout_marginLeft="150dp"
             />
+
 
 
         <ImageButton
             android:id="@+id/stick1"
             android:layout_width="80dp"
             android:layout_height="450dp"
-            android:layout_marginLeft="35dp"
+            android:layout_marginLeft="10dp"
             android:background="@drawable/stick"
             android:layout_marginBottom="70dp"
             app:layout_constraintLeft_toLeftOf="@id/Box"
@@ -93,12 +95,14 @@
 
         <ImageView
             android:id="@+id/Box"
-            android:layout_width="400dp"
-            android:layout_height="400dp"
-            android:background="@drawable/boxcut"
+            android:layout_width="360dp"
+            android:layout_height="350dp"
+            android:background="@drawable/boxcutting"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginBottom="100dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="300dp"
             />
 
 
