--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,123 +1,162 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/hamburger"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="50dp">
 
-        <Switch
-            android:id="@+id/adult_start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="320dp"
-            android:track="@drawable/switch_track_selector"
-            android:thumb="@drawable/switch_thumb"
-            />
-
-    </androidx.appcompat.widget.Toolbar>
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-
-        <ImageButton
-            android:id="@+id/stick1"
-            android:layout_width="80dp"
-            android:layout_height="500dp"
-            android:layout_marginLeft="35dp"
-            android:layout_marginTop="170dp"
-            android:background="@drawable/stick"
-
-            />
-
-        <ImageButton
-            android:id="@+id/stick2"
-            android:layout_width="80dp"
-            android:layout_height="500dp"
-            android:layout_alignLeft="@id/stick1"
-            android:layout_marginLeft="62dp"
-            android:layout_marginTop="170dp"
-            android:background="@drawable/stick" />
-
-        <ImageButton
-            android:id="@+id/stick3"
-            android:layout_width="80dp"
-            android:layout_height="500dp"
-            android:layout_alignLeft="@id/stick2"
-            android:layout_marginLeft="62dp"
-            android:layout_marginTop="170dp"
-            android:background="@drawable/stick" />
-
-        <ImageButton
-            android:id="@+id/stick4"
-            android:layout_width="80dp"
-            android:layout_height="500dp"
-            android:layout_alignLeft="@id/stick3"
-            android:layout_marginLeft="59dp"
-            android:layout_marginTop="170dp"
-            android:background="@drawable/stick" />
-
-        <ImageButton
-            android:id="@+id/stick5"
-            android:layout_width="80dp"
-            android:layout_height="500dp"
-            android:layout_alignLeft="@id/stick4"
-            android:layout_marginLeft="62dp"
-            android:layout_marginTop="170dp"
-            android:background="@drawable/stick" />
-
-        <ImageView
-            android:id="@+id/Box"
-            android:layout_width="500dp"
-            android:layout_height="400dp"
-            android:layout_marginTop="300dp"
-            android:background="@drawable/boxcut" />
-
-        <TextView
-            android:id="@+id/textView"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/Box"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="6dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="-6dp"
-            android:layout_marginBottom="-180dp"
-            android:gravity="center"
-            android:text="남은 벌칙"
-            android:textSize="20sp"
-            android:visibility="visible"
-            android:textColor="#c2bfbf"
-
-            />
-        <TextView
-            android:id="@+id/count"
+            android:layout_height="50dp"/>
+        <RelativeLayout
+            android:layout_marginTop="50dp"
             android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:elevation="1dp"
+                android:background="@android:color/background_light"
+                app:tabMode="fixed"
+                app:tabGravity="fill"
+                app:tabTextColor="@color/colorPrimary"
+                app:tabSelectedTextColor="@color/colorAccent" />
+
+            <FrameLayout
+                android:id="@+id/container"
+                android:layout_below="@id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+
+            </FrameLayout>
+        </RelativeLayout>
+
+
+<!--    <RelativeLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent">-->
+
+
+<!--        <ImageButton-->
+<!--            android:id="@+id/stick1"-->
+<!--            android:layout_width="80dp"-->
+<!--            android:layout_height="500dp"-->
+<!--            android:layout_marginLeft="35dp"-->
+<!--            android:layout_marginTop="170dp"-->
+<!--            android:background="@drawable/stick"-->
+
+<!--            />-->
+
+<!--        <ImageButton-->
+<!--            android:id="@+id/stick2"-->
+<!--            android:layout_width="80dp"-->
+<!--            android:layout_height="500dp"-->
+<!--            android:layout_alignLeft="@id/stick1"-->
+<!--            android:layout_marginLeft="62dp"-->
+<!--            android:layout_marginTop="170dp"-->
+<!--            android:background="@drawable/stick" />-->
+
+<!--        <ImageButton-->
+<!--            android:id="@+id/stick3"-->
+<!--            android:layout_width="80dp"-->
+<!--            android:layout_height="500dp"-->
+<!--            android:layout_alignLeft="@id/stick2"-->
+<!--            android:layout_marginLeft="62dp"-->
+<!--            android:layout_marginTop="170dp"-->
+<!--            android:background="@drawable/stick" />-->
+
+<!--        <ImageButton-->
+<!--            android:id="@+id/stick4"-->
+<!--            android:layout_width="80dp"-->
+<!--            android:layout_height="500dp"-->
+<!--            android:layout_alignLeft="@id/stick3"-->
+<!--            android:layout_marginLeft="59dp"-->
+<!--            android:layout_marginTop="170dp"-->
+<!--            android:background="@drawable/stick" />-->
+
+<!--        <ImageButton-->
+<!--            android:id="@+id/stick5"-->
+<!--            android:layout_width="80dp"-->
+<!--            android:layout_height="500dp"-->
+<!--            android:layout_alignLeft="@id/stick4"-->
+<!--            android:layout_marginLeft="62dp"-->
+<!--            android:layout_marginTop="170dp"-->
+<!--            android:background="@drawable/stick" />-->
+
+<!--        <ImageView-->
+<!--            android:id="@+id/Box"-->
+<!--            android:layout_width="500dp"-->
+<!--            android:layout_height="400dp"-->
+<!--            android:layout_marginTop="300dp"-->
+<!--            android:background="@drawable/boxcut" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/textView"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_above="@+id/Box"-->
+<!--            android:layout_alignParentStart="true"-->
+<!--            android:layout_alignParentTop="true"-->
+<!--            android:layout_alignParentEnd="true"-->
+<!--            android:layout_marginStart="6dp"-->
+<!--            android:layout_marginTop="40dp"-->
+<!--            android:layout_marginEnd="-6dp"-->
+<!--            android:layout_marginBottom="-180dp"-->
+<!--            android:gravity="center"-->
+<!--            android:text="남은 벌칙"-->
+<!--            android:textSize="20sp"-->
+<!--            android:visibility="visible"-->
+<!--            android:textColor="#c2bfbf"-->
+
+<!--            />-->
+<!--        <TextView-->
+<!--            android:id="@+id/count"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_above="@+id/Box"-->
+<!--            android:layout_alignParentStart="true"-->
+<!--            android:layout_alignParentTop="true"-->
+<!--            android:layout_alignParentEnd="true"-->
+<!--            android:layout_marginStart="6dp"-->
+<!--            android:layout_marginTop="40dp"-->
+<!--            android:layout_marginEnd="-6dp"-->
+<!--            android:layout_marginBottom="-250dp"-->
+<!--            android:gravity="center"-->
+<!--            android:text="count"-->
+<!--            android:textSize="60sp"-->
+<!--            android:visibility="visible"-->
+<!--            android:textColor="#dbdbdb"-->
+<!--            />-->
+<!--    </RelativeLayout>-->
+        <LinearLayout
+            android:layout_width="300dp"
             android:layout_height="match_parent"
-            android:layout_above="@+id/Box"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="6dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="-6dp"
-            android:layout_marginBottom="-250dp"
-            android:gravity="center"
-            android:text="count"
-            android:textSize="60sp"
-            android:visibility="visible"
-            android:textColor="#dbdbdb"
-            />
-    </RelativeLayout>
+            android:layout_gravity='start'
+            android:background="@android:color/white"
+            android:orientation="vertical"
+            xmlns:android="http://schemas.android.com/apk/res/android">
 
+            <TextView
+                android:id="@+id/alarm_hamburger_startpage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="update"
+                android:padding="20dp"
+                android:text="개발자"
+                android:textColor="@android:color/black" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+            <TextView
+                android:id="@+id/wishlist_hamburger_startpage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="update"
+                android:padding="20dp"
+                android:text="설정"
+                android:textColor="@android:color/black" />
+
+        </LinearLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
